--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>WeatherApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/weather-icons.min.css">
+  <link rel="stylesheet" href="assets/css/weather-icons-wind.min.css">
+  <link rel="stylesheet" href="assets/css/weather-icons.css">
+  <link rel="stylesheet" href="assets/css/weather-icons-wind.css">
 </head>
 <body>
   <app-root></app-root>
