--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="assets/css/weather-icons.css">
   <link rel="stylesheet" href="assets/css/weather-icons-wind.css">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
